--- a/src/RateLimiter.Api/RateLimiter.Api.csproj
+++ b/src/RateLimiter.Api/RateLimiter.Api.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\RateLimiter.Infrastructure\RateLimiter.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="8.4.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
