--- a/src/RateLimiter.Api/appsettings.json
+++ b/src/RateLimiter.Api/appsettings.json
@@ -6,9 +6,18 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Redis": "localhost:6380,connectTimeout=1000,syncTimeout=500,abortConnect=false"
+  },
   "RateLimiting": {
+    "Store": "Redis",
     "FailOpen": true,
     "CleanupIntervalSeconds": 300,
+    "CircuitBreaker": {
+      "FailureThreshold": 5,
+      "SamplingDurationSeconds": 30,
+      "BreakDurationSeconds": 15
+    },
     "Rules": {
       "/api/resource": {
         "Limit": 10,
