--- a/src/RateLimiter.Infrastructure/RateLimiter.Infrastructure.csproj
+++ b/src/RateLimiter.Infrastructure/RateLimiter.Infrastructure.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\RateLimiter.Domain\RateLimiter.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="8.4.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
