--- a/tests/RateLimiter.Tests/RateLimiter.Tests.csproj
+++ b/tests/RateLimiter.Tests/RateLimiter.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="Testcontainers.Redis" Version="3.10.0" />
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="10.3.0" />
